--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "cipher.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon cipher.js"
+    "start-test": "nodemon tester.js",
+    "start": "nodemon test.js"
   },
   "author": "",
   "license": "ISC",
